changed the z index

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
     <!-- Features Section -->
 
     <section id="features">
+      
+
       <div class="row">
         <div class="col-lg-4">
           <img class="animatedIcon" src="images/check-circle.gif" alt="Check" />
@@ -101,7 +103,7 @@
           <p>So easy to use, even your cat could do it.</p>
         </div>
 
-        <div class="col-lg-4 ">
+        <div class="col-lg-4">
           <img class="animatedIcon" src="images/icons8-goal.gif" alt="Goal" />
 
           <h3>Elite Clientele</h3>
@@ -115,6 +117,7 @@
           <p>Find the love of your cat's life or your money back.</p>
         </div>
       </div>
+    
     </section>
 
     <!-- Testimonials -->
@@ -134,7 +137,7 @@
             </h2>
             <img
               class="testimonial-images"
-              src="images/dog-img.jpg"
+              src="images/IMG_5423.JPG"
               alt="cat-profile"
             />
             <em>Pebbles, New York</em>
@@ -195,11 +198,7 @@
       <p>Simple and affordable price plans for your and your cat.</p>
 
       <div class="container">
-
-
-        <div class="row ">
-
-
+        <div class="row">
           <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-header">
@@ -218,8 +217,6 @@
             </div>
           </div>
 
-
-
           <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-header">
@@ -235,8 +232,6 @@
               </div>
             </div>
           </div>
-
-
 
           <div class="col-md-12 col-lg-4">
             <div class="card">
