--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-md-0">
               <li class="nav-item">
-                <a href="#" class="nav-link">Contact</a>
+                <a href="#footer" class="nav-link">Contact</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Download</a>
+                <a href="#cta" class="nav-link">Download</a>
               </li>
-              <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+              <li class="nav-item">
+                <a href="#testimonials" class="nav-link">About</a>
+              </li>
             </ul>
           </div>
         </nav>
@@ -67,7 +69,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h1>Meet new and interesting cats nearby.</h1>
+            <h1 class="bigHeading">Meet new and interesting cats nearby.</h1>
             <button type="button" class="btn btn-dark btn-lg downloadButton">
               <i class="fab fa-app-store"> Download</i>
             </button>
@@ -93,31 +95,28 @@
     <!-- Features Section -->
 
     <section id="features">
-      
-
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-md-4">
           <img class="animatedIcon" src="images/check-circle.gif" alt="Check" />
 
-          <h3>Easy to use.</h3>
+          <h3 class="featuresHeading">Easy to use.</h3>
           <p>So easy to use, even your cat could do it.</p>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-md-4">
           <img class="animatedIcon" src="images/icons8-goal.gif" alt="Goal" />
 
-          <h3>Elite Clientele</h3>
+          <h3 class="featuresHeading">Elite Clientele</h3>
           <p>We have all the cats, the greatest cats.</p>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-md-4">
           <img class="animatedIcon" src="images/icons8-heart.gif" alt="Heart" />
 
-          <h3>Guaranteed to work.</h3>
+          <h3 class="featuresHeading">Guaranteed to work.</h3>
           <p>Find the love of your cat's life or your money back.</p>
         </div>
       </div>
-    
     </section>
 
     <!-- Testimonials -->
@@ -131,9 +130,9 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <h2>
+            <h2 class="carouselHeading">
               I no longer have to sniff other cats for love. I've found the
-              hottest Corgi on Tincat. Woof.
+              hottest Corgi on Tincat. Meaooo .
             </h2>
             <img
               class="testimonial-images"
@@ -143,7 +142,7 @@
             <em>Pebbles, New York</em>
           </div>
           <div class="carousel-item">
-            <h2 class="testimonial-text">
+            <h2 class="carouselHeading">
               My cat used to be so lonely, but with Tincat's help, they've found
               the love of their life. I think.
             </h2>
@@ -194,7 +193,7 @@
     <!-- Pricing -->
 
     <section id="pricing">
-      <h2>A Plan for Every Cat's Needs</h2>
+      <h2 class="pricingHeading">A Plan for Every Cat's Needs</h2>
       <p>Simple and affordable price plans for your and your cat.</p>
 
       <div class="container">
@@ -205,8 +204,8 @@
                 <h3>Chihuahua</h3>
               </div>
               <div class="card-body d-grid gap-2">
-                <h2 class="card-title">Free</h2>
-                <p class="card-text">5 Matches Per Day</p>
+                <h2 class="card-title">$0 / free</h2>
+                <p>5 Matches Per Day</p>
                 <p>10 Messages Per Day</p>
                 <p>Unlimited App Usage</p>
                 <p><i class="far fa-times-circle"></i></p>
