--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&family=Ubuntu&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Ubuntu&display=swap"
       rel="stylesheet"
     />
 
@@ -27,12 +27,18 @@
       rel="stylesheet"
     />
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+
     <title>tincat 🐈</title>
+    
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
-    <section id="title">
+    <section id="title" class="color-section">
+      >
       <div class="container-fluid">
         <!-- Nav Bar -->
 
@@ -69,7 +75,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h1 class="bigHeading">Meet new and interesting cats nearby.</h1>
+            <h1 class="titleHeading">Meet new and interesting cats nearby.</h1>
             <button type="button" class="btn btn-dark btn-lg downloadButton">
               <i class="fab fa-app-store"> Download</i>
             </button>
@@ -94,7 +100,7 @@
 
     <!-- Features Section -->
 
-    <section id="features">
+    <section id="features" class="container-fluid white-section">
       <div class="row">
         <div class="col-md-4">
           <img class="animatedIcon" src="images/check-circle.gif" alt="Check" />
@@ -121,7 +127,7 @@
 
     <!-- Testimonials -->
 
-    <section id="testimonials">
+    <section id="testimonials" class="color-section">
       <div
         id="Controls"
         class="carousel slide"
@@ -129,19 +135,19 @@
         data-bs-pause="hover"
       >
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active container-fluid">
             <h2 class="carouselHeading">
               I no longer have to sniff other cats for love. I've found the
               hottest Corgi on Tincat. Meaooo .
             </h2>
             <img
               class="testimonial-images"
-              src="images/IMG_5423.JPG"
+              src="images/cat-img.jpg"
               alt="cat-profile"
             />
             <em>Pebbles, New York</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="carouselHeading">
               My cat used to be so lonely, but with Tincat's help, they've found
               the love of their life. I think.
@@ -179,7 +185,7 @@
 
     <!-- Press -->
 
-    <section id="press">
+    <section id="press" class="color-section">
       <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo" />
       <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
       <img
@@ -192,7 +198,7 @@
 
     <!-- Pricing -->
 
-    <section id="pricing">
+    <section id="pricing" class="container-fluid white-section">
       <h2 class="pricingHeading">A Plan for Every Cat's Needs</h2>
       <p>Simple and affordable price plans for your and your cat.</p>
 
@@ -201,7 +207,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-header">
-                <h3>Chihuahua</h3>
+                <h3>Silver</h3>
               </div>
               <div class="card-body d-grid gap-2">
                 <h2 class="card-title">$0 / free</h2>
@@ -219,7 +225,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-header">
-                <h3>Labrador</h3>
+                <h3>Gold</h3>
               </div>
               <div class="card-body d-grid gap-2">
                 <h2 class="card-title">$49 / mo</h2>
@@ -235,7 +241,7 @@
           <div class="col-md-12 col-lg-4">
             <div class="card">
               <div class="card-header">
-                <h3>Mastiff</h3>
+                <h3>Diamond</h3>
               </div>
               <div class="card-body d-grid gap-2">
                 <h2 class="card-title">$99 / mo</h2>
@@ -255,8 +261,8 @@
 
     <!-- Call to Action -->
 
-    <section id="cta">
-      <h3 class="big-heading">Find the True Love of Your Cat's Life Today.</h3>
+    <section id="cta" class="container-fluid color-section">
+      <h3 class="ctaHeading">Find the True Love of Your Cat's Life Today.</h3>
       <button type="button" class="btn btn-dark btn-lg downloadButton">
         <i class="fab fa-app-store"> Download</i>
       </button>
@@ -267,7 +273,7 @@
 
     <!-- Footer -->
 
-    <footer id="footer">
+    <footer id="footer" class="container-fluid white-section">
       <ul class="footerUl">
         <li class="footerLi">
           <a href="#" class="footerLink">
@@ -294,6 +300,10 @@
           document.write(new Date().getFullYear());
         </script>
         tincat bd ltd.
+      </p>
+      <p class="credit">
+        Designed by
+        <a href="https://aariyanapu.github.io/aariyan_apu/"> Aariyan Apu </a>
       </p>
     </footer>
 
