--- a/index.html
+++ b/index.html
@@ -28,17 +28,15 @@
     />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
     <title>tincat 🐈</title>
-    
+
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
     <section id="title" class="color-section">
-      >
       <div class="container-fluid">
         <!-- Nav Bar -->
 
